footer font size changed fixed the alignment with the main >> event's content

--- a/css/footer.css
+++ b/css/footer.css
@@ -59,7 +59,7 @@ body{
 }
 
 .footer-item a, p{
-	font-size: 13px;
+	font-size: 11px;
 	color: #616161;
 	margin: 0 3em;
 	text-decoration: none;
@@ -77,7 +77,7 @@ body{
 
 .footer-detail{
 	color: #7b7b7b;
-	font-size: 12px;
+	font-size: 10px;
 	float: right;
 	padding: 1.5em;
 /*	padding-left: 6em;
